app.yml
# app.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
  namespace: app-demo
spec:
  selector:
    app: quarkus-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  namespace: app-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      securityContext:
        runAsUser: 1001
        runAsNonRoot: true
      containers:
        - name: app
          image: my-quarkus:jvm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
