ingress-http.yaml
# ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-ingress
  namespace: app-demo
spec:
  ingressClassName: nginx
  rules:
    - host: quarkus.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-app
                port:
                  number: 8080
